# attention-kernel-cuda

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_core.py
docs/: architecture.md  interview-prep.md
examples/: quickstart.py
kernels/: flash_attention.cu
social/: linkedin-post.md  x-post.md
src/attention_kernel_cuda/: __init__.py  cli.py  core.py  exceptions.py  models.py  tiling.py  utils.py
tests/: conftest.py  test_core.py  test_models.py  test_tiling.py
